Menu misalignment fix

--- a/style.css
+++ b/style.css
@@ -31,22 +31,33 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 8rem;
+	height: 5rem;
 	box-shadow: 0 0 10px #ddd;
 	position: sticky;
-	padding: 2rem;
 }
 
 .navbar ul {
 	display: flex;
 	align-items: center;
 	gap: 4rem;
-	height: 100%;
+	height: 4rem;
 	list-style: none;
 }
 
 .navbar li {
 	height: 100%;
+	display: flex;
+	align-items: center;
+	border-bottom: 3px solid transparent;
+}
+
+.navbar li > :only-child {
+	height: 100%;
+	padding-top: 15px;
+}
+
+.navbar li .style__button {
+	padding-top: 0px;
 }
 
 .dropdown .dropbtn {
@@ -56,14 +67,12 @@ a {
 	font-size: inherit;
 	font-weight: inherit;
 	padding-bottom: 10px;
-	margin-top: 10px;
 }
 
 .dropdown-content {
 	display: none;
 	position: absolute;
 	min-width: 160px;
-	z-index: 1;
 }
 
 .dropdown-content a {
@@ -74,6 +83,7 @@ a {
 	flex-direction: column;
 	height: 3.5rem;
 	padding: 1rem 0;
+	border-bottom: 1px solid rgb(212, 212, 212);
 }
 
 .dropdown-content a:hover {
@@ -93,7 +103,7 @@ a {
 .demo:hover {
 	color: var(--main-color);
 	border-bottom: 3px solid var(--main-color);
-	padding-bottom: 10px;
+	padding-bottom: 15px;
 }
 
 .navbar__logo img {
@@ -198,22 +208,18 @@ h2 {
 
 .main__img:hover .filter__container {
 	opacity: 1;
-	filter: brightness(100%); /* NO FUNCIONA */
 }
 
 .img1 {
 	background-image: url(/images/01.jpg);
-	min-width: 300px;
 }
 
 .img2 {
 	background-image: url(/images/02.jpg);
-	min-width: 300px;
 }
 
 .img3 {
 	background-image: url(/images/03.jpg);
-	min-width: 300px;
 }
 
 h3,
@@ -287,26 +293,35 @@ h4 {
 	}
 
 	.main__img {
-		min-width: 50px;
 	}
 
 	.img1 {
 		margin-top: 2rem;
-		min-width: 50px;
+		height: 30rem;
+		width: 100%;
+		max-width: 30rem;
+		display: flex;
 	}
 
 	.img2 {
-		min-width: 50px;
+		height: 30rem;
+		width: 100%;
+		max-width: 30rem;
+		display: flex;
 	}
 
 	.img3 {
-		min-width: 50px;
+		height: 30rem;
+		width: 100%;
+		max-width: 30rem;
+		display: flex;
 	}
 
 	.filter__container {
 		opacity: 1;
-		height: 100%;
+		height: 30rem;
 		width: 100%;
+		max-width: 30rem;
 		border-radius: 50px;
 		display: flex;
 		flex-direction: column;
